--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-Привет
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Test</title>
+    </head>
+    <body>
+        <p>Привет</p>
+    </body>
+</html>
