--- a/index.html
+++ b/index.html
@@ -1,9 +1,80 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Test</title>
-    </head>
-    <body>
-        <p>Привет</p>
-    </body>
+<html lang="ru">
+
+<head>
+    <meta charset="UTF-8">
+    <title>Магазин мороженого "Gllacy Shop"</title>
+</head>
+
+<body>
+
+    <header>
+        <nav>
+            <a href="index.html">
+                <img src="../Новая папка/1241635-gllacy-30-master/img/favicon/icon.svg" width="152" height="64"
+                    alt="Логотип магазина мороженого Gllacy Shop">
+            </a>
+            <ul>
+                <li><a href="catalog.html">Каталог</a></li>
+                <li><a href="blank.html">Доставка и оплата</a></li>
+                <li><a href="blank.html">О компании</a></li>
+            </ul>
+            <li><a href="#"><svg>http://www.w3.org/2000/svg</svg></a></li>
+            <li><a href="blank.html">Вход</a></li>
+            <li><a href="blank.html">Корзина</a></li>
+        </nav>
+    </header>
+
+   
+    <footer>
+        <section>
+            <ul>
+                <a href="#">Фейсбук</a>
+                <a href="#">ВКонтакте</a>
+                <a href="#">Инстаграм</a>
+                <a href="#">Твиттер</a>
+            </ul>
+        </section>
+        <section>
+            <ul>
+                <a href="blank.html">Для поставщиков</a>
+                <a href="blank.html">О производстве</a>
+                <a href="blank.html">Наши документы</a>
+                <a href="blank.html">Экологические стандарты</a>
+            </ul>
+        </section>
+        <section>
+            <img src="logo_academy.svg">
+            <p>Сделано в <a href="blank.html">HTML Academy</a> © 2019</p>
+        </section>
+    </footer>
+
+    <section>
+        <h2>Личный кабинет</h2>
+        <p>Введите, пожалуйста, свой логин и пароль</p>
+        <form action="http://echo.htmlacademy.ru" method="post">
+            <p>
+                <label for="login-login">Логин</label>
+                <input id="login-login" type="email" name="login" placeholder="email@example.com">
+            </p>
+            <p>
+                <label for="login-password">Пароль</label>
+                <input id="login-password" type="password" name="pasword" placeholder="********">
+            </p>
+            <p>
+                <label>
+                    <input type="checkbox" name="remember">
+                    Запомните меня
+                </label>
+                <a href="blank.html">Я забыл пароль!</a>
+            </p>
+            <p>
+                <button type="submit">Войти</button>
+            </p>
+        </form>
+        <p>
+            <button type="button">Закрыть</button>
+        </p>
+    </section>
+</body>
 </html>
