--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <title>Магазин мороженого "Gllacy Shop"</title>
 </head>
 
-<body>
+<body style="background-color: #849D8F;">
+    
 
     <header>
         <nav>
             <a href="index.html">
-                <img src="../Новая папка/1241635-gllacy-30-master/img/favicon/icon.svg" width="152" height="64"
+                <img src="img\index\logo.svg" width="154" height="64" 
                     alt="Логотип магазина мороженого Gllacy Shop">
             </a>
             <ul>
@@ -19,9 +20,15 @@
                 <li><a href="blank.html">Доставка и оплата</a></li>
                 <li><a href="blank.html">О компании</a></li>
             </ul>
-            <li><a href="#"><svg>http://www.w3.org/2000/svg</svg></a></li>
-            <li><a href="blank.html">Вход</a></li>
-            <li><a href="blank.html">Корзина</a></li>
+            <li><a href="#">
+                <img src="img\index\icon_search.svg" width="16" height="16">
+            </a></li>
+            <li><a href="blank.html">
+                <img src="img\index\icon_authorization.svg" width="20" height="19">
+                Вход</a></li>
+            <li><a href="blank.html">
+                <img src="img\index\icon_basket.svg" width="21" height="20">
+                Корзина</a></li>
         </nav>
     </header>
 
@@ -29,22 +36,24 @@
     <footer>
         <section>
             <ul>
-                <a href="#">Фейсбук</a>
-                <a href="#">ВКонтакте</a>
-                <a href="#">Инстаграм</a>
-                <a href="#">Твиттер</a>
+                <a href="#"><img src="img\index\icon_facebook.svg" width="32" height="32"></img></a>
+                <a href="#"><img src="img\index\icon_vk.svg" width="32" height="32"></img></a>
+                <a href="#"><img src="img\index\icon_instagram.svg" width="32" height="32"></img></a>
+                <a href="#"><img src="img\index\icon_twitter.svg" width="32" height="32"></img></a>
             </ul>
         </section>
         <section>
             <ul>
-                <a href="blank.html">Для поставщиков</a>
-                <a href="blank.html">О производстве</a>
-                <a href="blank.html">Наши документы</a>
-                <a href="blank.html">Экологические стандарты</a>
+                <p><a href="blank.html">
+                    <img src="img\index\heart.svg" width="15" height="13"></img>
+                    Для поставщиков</a>
+                <a href="blank.html">Наши документы</a></p>
+                <p><a href="blank.html">О производстве</a>
+                <a href="blank.html">Экологические стандарты</a></p>
             </ul>
         </section>
         <section>
-            <img src="logo_academy.svg">
+            <img src="img\index\logo_academy.svg" width="108" height="39" viewBox="0 0 108 39" fill="none">
             <p>Сделано в <a href="blank.html">HTML Academy</a> © 2019</p>
         </section>
     </footer>
