--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
 </head>
 
 <body style="background-color: #849D8F;">
-    
+
 
     <header>
         <nav>
             <a href="index.html">
-                <img src="img\index\logo.svg" width="154" height="64" 
-                    alt="Логотип магазина мороженого Gllacy Shop">
+                <img src="img\index\logo.svg" width="154" height="64" alt="Логотип магазина мороженого Gllacy Shop">
             </a>
             <ul>
                 <li><a href="catalog.html">Каталог</a></li>
@@ -21,18 +20,130 @@
                 <li><a href="blank.html">О компании</a></li>
             </ul>
             <li><a href="#">
-                <img src="img\index\icon_search.svg" width="16" height="16">
-            </a></li>
+                    <img src="img\index\icon_search.svg" width="16" height="16">
+                </a></li>
             <li><a href="blank.html">
-                <img src="img\index\icon_authorization.svg" width="20" height="19">
-                Вход</a></li>
+                    <img src="img\index\icon_authorization.svg" width="20" height="19">
+                    Вход</a></li>
             <li><a href="blank.html">
-                <img src="img\index\icon_basket.svg" width="21" height="20">
-                Корзина</a></li>
+                    <img src="img\index\icon_basket.svg" width="21" height="20">
+                    Корзина</a></li>
         </nav>
     </header>
+    <main>
+        <h1>Магазин мороженого "Gllacy Shop"</h1>
 
-   
+        <div>
+            <p>с 10 до 20, ежедневно</p>
+            <p>8 812 450-25-25</p>
+        </div>
+
+        <section>
+            <h2>Продукция</h2>
+            <ul>
+                <li>
+                    <p>Крем-брюле и пломбир с малиновым джемом</p>
+                    <button>Давайте оба!</button>
+                </li>
+                <li>
+                    <p>Шоколадный пломбир и лимонный сорбет</p>
+                    <button>Давайте оба!</button>
+                </li>
+                <li>
+                    <p>Пломбир с помадкой и клубничный щербет</p>
+                    <button>Давайте оба!</button>
+                </li>
+            </ul>
+
+        </section>
+        <section>
+            <h2>Акции</h2>
+            <ul>
+                <li>
+                    <h3>Малинка даром!</h3>
+                    <p>При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья
+                        бесплатно
+                    </p>
+                    <button>Хочу варенье!</button>
+                </li>
+                <li>
+                    <h3>Шоколадки даром!</h3>
+                    <p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадки совершенно бесплатно
+                    </p>
+                    <button>Хочу шоколадки!</button>
+                </li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>Каталог</h2>
+            <ul>
+                <li>
+                    <img src="img\index\hit_1.jpg"></img>
+                    <p>Сливочное с апельсиновым джемом и цитрусовой стружкой</p>
+                    <button>Быстрый просмотр</button>
+                </li>
+                <li>
+                    <img src="img\index\hit_2.jpg"></img>
+                    <p>Сливочно-кофейное с кусочками шоколада</p>
+                    <button>Быстрый просмотр</button>
+                </li>
+                <li>
+                    <img src="img\index\hit_3.jpg"></img>
+                    <p>Сливочно-клубничное c присыпкой из белого шоколада</p>
+                    <button>Быстрый просмотр</button>
+                </li>
+                <li>
+                    <img src="img\index\hit_4.jpg"></img>
+                    <p>Сливочное крем-брюле с карамельной подливкой</p>
+                    <button>Быстрый просмотр</button>
+                </li>
+            </ul>
+        </section>
+        <section>
+            <h2>Магазин Глэйси – это онлайн и офлайн-магазин по продаже мороженого собственного производства на развес
+            </h2>
+            <ul>
+                <li>
+                    <p><img src="img\index\icon_ice_cream.svg" width="16" height="32"></img>
+                        Все наше мороженое изготавливается на собственном производстве, с использованием современного
+                        оборудования и проверенных временем технологий</p>
+                </li>
+                <li>
+                    <p><img src="img\index\icon_leaf.svg" width="16" height="27"></img>
+                        Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все
+                        дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья</p>
+                </li>
+                <li>
+                    <p><img src="img\index\icon_cow.svg" width="24" height="24"></img>
+                        Закупка ингредиентов производится только у проверенных фермерских хозяйств и компаний, с
+                        которыми нас
+                        связывает долговременное сотрудничество</p>
+                </li>
+                <li>
+                    <p><img src="img\index\icon_thermometer.svg" width="16" height="26"></img>
+                        Доставка нашего мороженого до заказчиков осуществляется в специальнои термопаке, который не дает
+                        мороженому растаять в пути и позволяет сохранить превосходный вкус</p>
+                </li>
+            </ul>
+        </section>
+        <section>
+            <h4>Новое в нашем блоге</h4>
+            <p><a href="blank.html">10 способов сервировки фруктовых щербетов к столу</a></p>
+        </section>
+        <section>
+            <p>Подпишитесь на нашу сладкую рассылку и будьте всегда в курсе всего самого вкусного, что у нас
+                происходит.Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
+            <input type="email" name="e-mail" placeholder="email@example.com">
+            <button type="submit">Отправить</button>
+        </section>
+        <section>
+            <img src="img\index\map.jpg">
+            <!--здесь будет карта-->
+            <!--здесь форма записи-->
+        </section>
+    </main>
+
     <footer>
         <section>
             <ul>
@@ -45,11 +156,13 @@
         <section>
             <ul>
                 <p><a href="blank.html">
-                    <img src="img\index\heart.svg" width="15" height="13"></img>
-                    Для поставщиков</a>
-                <a href="blank.html">Наши документы</a></p>
+                        <img src="img\index\heart.svg" width="15" height="13"></img>
+                        Для поставщиков</a>
+                    <a href="blank.html">Наши документы</a>
+                </p>
                 <p><a href="blank.html">О производстве</a>
-                <a href="blank.html">Экологические стандарты</a></p>
+                    <a href="blank.html">Экологические стандарты</a>
+                </p>
             </ul>
         </section>
         <section>
@@ -86,4 +199,5 @@
         </p>
     </section>
 </body>
+
 </html>
