--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
 </head>
 
 <body style="background-color: #849D8F;">
-
-
     <header>
         <nav>
             <a href="index.html">
@@ -19,25 +17,34 @@
                 <li><a href="blank.html">Доставка и оплата</a></li>
                 <li><a href="blank.html">О компании</a></li>
             </ul>
-            <li><a href="#">
-                    <img src="img\index\icon_search.svg" width="16" height="16">
-                </a></li>
-            <li><a href="blank.html">
-                    <img src="img\index\icon_authorization.svg" width="20" height="19">
-                    Вход</a></li>
-            <li><a href="blank.html">
-                    <img src="img\index\icon_basket.svg" width="21" height="20">
-                    Корзина</a></li>
         </nav>
+        <ul>
+            <li>
+                <a href="#">
+                    <img src="img\index\icon_search.svg" width="16" height="16">
+                </a>
+            </li>
+            <li>
+                <a href="blank.html">
+                    <img src="img\index\icon_authorization.svg" width="20" height="19">
+                    Вход
+                </a>
+            </li>
+            <li>
+                <a href="blank.html">
+                    <img src="img\index\icon_basket.svg" width="21" height="20">
+                    Корзина
+                </a>
+            </li>
+        </ul>
     </header>
+
     <main>
         <h1>Магазин мороженого "Gllacy Shop"</h1>
-
         <div>
             <p>с 10 до 20, ежедневно</p>
             <p>8 812 450-25-25</p>
         </div>
-
         <section>
             <h2>Продукция</h2>
             <ul>
@@ -54,7 +61,6 @@
                     <button>Давайте оба!</button>
                 </li>
             </ul>
-
         </section>
         <section>
             <h2>Акции</h2>
@@ -74,7 +80,6 @@
                 </li>
             </ul>
         </section>
-
         <section>
             <h2>Каталог</h2>
             <ul>
@@ -170,7 +175,6 @@
             <p>Сделано в <a href="blank.html">HTML Academy</a> © 2019</p>
         </section>
     </footer>
-
     <section>
         <h2>Личный кабинет</h2>
         <p>Введите, пожалуйста, свой логин и пароль</p>
