Исправлен тег img (+alt и размеры)

--- a/index.html
+++ b/index.html
@@ -21,18 +21,18 @@
         <ul>
             <li>
                 <a href="#">
-                    <img src="img\index\icon_search.svg" width="16" height="16">
+                    <img src="img\index\icon_search.svg" width="16" height="16" alt="Поиск">
                 </a>
             </li>
             <li>
                 <a href="blank.html">
-                    <img src="img\index\icon_authorization.svg" width="20" height="19">
+                    <img src="img\index\icon_authorization.svg" width="20" height="19" alt="Вход">
                     Вход
                 </a>
             </li>
             <li>
                 <a href="blank.html">
-                    <img src="img\index\icon_basket.svg" width="21" height="20">
+                    <img src="img\index\icon_basket.svg" width="21" height="20" alt="Корзина">
                     Корзина
                 </a>
             </li>
@@ -84,22 +84,22 @@
             <h2>Каталог</h2>
             <ul>
                 <li>
-                    <img src="img\index\hit_1.jpg"></img>
+                    <img src="img\index\hit_1.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой"></img>
                     <p>Сливочное с апельсиновым джемом и цитрусовой стружкой</p>
                     <button>Быстрый просмотр</button>
                 </li>
                 <li>
-                    <img src="img\index\hit_2.jpg"></img>
+                    <img src="img\index\hit_2.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада"></img>
                     <p>Сливочно-кофейное с кусочками шоколада</p>
                     <button>Быстрый просмотр</button>
                 </li>
                 <li>
-                    <img src="img\index\hit_3.jpg"></img>
+                    <img src="img\index\hit_3.jpg" width="267" height="267" alt="Сливочно-клубничное c присыпкой из белого шоколада"></img>
                     <p>Сливочно-клубничное c присыпкой из белого шоколада</p>
                     <button>Быстрый просмотр</button>
                 </li>
                 <li>
-                    <img src="img\index\hit_4.jpg"></img>
+                    <img src="img\index\hit_4.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой"></img>
                     <p>Сливочное крем-брюле с карамельной подливкой</p>
                     <button>Быстрый просмотр</button>
                 </li>
@@ -110,23 +110,23 @@
             </h2>
             <ul>
                 <li>
-                    <p><img src="img\index\icon_ice_cream.svg" width="16" height="32"></img>
+                    <p><img src="img\index\icon_ice_cream.svg" width="16" height="32" alt="Мороженое"></img>
                         Все наше мороженое изготавливается на собственном производстве, с использованием современного
                         оборудования и проверенных временем технологий</p>
                 </li>
                 <li>
-                    <p><img src="img\index\icon_leaf.svg" width="16" height="27"></img>
+                    <p><img src="img\index\icon_leaf.svg" width="16" height="27" alt="Лист"></img>
                         Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все
                         дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья</p>
                 </li>
                 <li>
-                    <p><img src="img\index\icon_cow.svg" width="24" height="24"></img>
+                    <p><img src="img\index\icon_cow.svg" width="24" height="24" alt="Корова"></img>
                         Закупка ингредиентов производится только у проверенных фермерских хозяйств и компаний, с
                         которыми нас
                         связывает долговременное сотрудничество</p>
                 </li>
                 <li>
-                    <p><img src="img\index\icon_thermometer.svg" width="16" height="26"></img>
+                    <p><img src="img\index\icon_thermometer.svg" width="16" height="26" alt="Термометр"></img>
                         Доставка нашего мороженого до заказчиков осуществляется в специальнои термопаке, который не дает
                         мороженому растаять в пути и позволяет сохранить превосходный вкус</p>
                 </li>
@@ -143,7 +143,7 @@
             <button type="submit">Отправить</button>
         </section>
         <section>
-            <img src="img\index\map.jpg">
+            <img src="img\index\map.jpg" alt="Карта">
             <!--здесь будет карта-->
             <!--здесь форма записи-->
         </section>
@@ -152,16 +152,16 @@
     <footer>
         <section>
             <ul>
-                <a href="#"><img src="img\index\icon_facebook.svg" width="32" height="32"></img></a>
-                <a href="#"><img src="img\index\icon_vk.svg" width="32" height="32"></img></a>
-                <a href="#"><img src="img\index\icon_instagram.svg" width="32" height="32"></img></a>
-                <a href="#"><img src="img\index\icon_twitter.svg" width="32" height="32"></img></a>
+                <a href="#"><img src="img\index\icon_facebook.svg" width="32" height="32" alt="Facebook"></img></a>
+                <a href="#"><img src="img\index\icon_vk.svg" width="32" height="32" alt="VK"></img></a>
+                <a href="#"><img src="img\index\icon_instagram.svg" width="32" height="32" alt="Instagram"></img></a>
+                <a href="#"><img src="img\index\icon_twitter.svg" width="32" height="32" alt="Twitter"></img></a>
             </ul>
         </section>
         <section>
             <ul>
                 <p><a href="blank.html">
-                        <img src="img\index\heart.svg" width="15" height="13"></img>
+                        <img src="img\index\heart.svg" width="15" height="13" alt="Heart"></img>
                         Для поставщиков</a>
                     <a href="blank.html">Наши документы</a>
                 </p>
@@ -171,7 +171,7 @@
             </ul>
         </section>
         <section>
-            <img src="img\index\logo_academy.svg" width="108" height="39" viewBox="0 0 108 39" fill="none">
+            <img src="img\index\logo_academy.svg" width="108" height="39" alt="Логотип академии" viewBox="0 0 108 39" fill="none">
             <p>Сделано в <a href="blank.html">HTML Academy</a> © 2019</p>
         </section>
     </footer>
