--- a/blank.html
+++ b/blank.html
@@ -20,13 +20,13 @@
                 <li><a href="blank.html">О компании</a></li>
             </ul>
             <li><a href="#">
-                    <img src="img\index\icon_search.svg" width="16" height="16">
+                    <img src="img\index\icon_search.svg" width="16" height="16" alt="Поиск">
                 </a></li>
             <li><a href="blank.html">
-                    <img src="img\index\icon_authorization.svg" width="20" height="19">
+                    <img src="img\index\icon_authorization.svg" width="20" height="19" alt="Вход">
                     Вход</a></li>
             <li><a href="blank.html">
-                    <img src="img\index\icon_basket.svg" width="21" height="20">
+                    <img src="img\index\icon_basket.svg" width="21" height="20" alt="Корзина">
                     Корзина</a></li>
         </nav>
     </header>
@@ -36,16 +36,16 @@
     <footer>
         <section>
             <ul>
-                <a href="#"><img src="img\index\icon_facebook.svg" width="32" height="32"></img></a>
-                <a href="#"><img src="img\index\icon_vk.svg" width="32" height="32"></img></a>
-                <a href="#"><img src="img\index\icon_instagram.svg" width="32" height="32"></img></a>
-                <a href="#"><img src="img\index\icon_twitter.svg" width="32" height="32"></img></a>
+                <a href="#"><img src="img\index\icon_facebook.svg" width="32" height="32" alt="Facebook"></img></a>
+                <a href="#"><img src="img\index\icon_vk.svg" width="32" height="32" alt="VK"></img></a>
+                <a href="#"><img src="img\index\icon_instagram.svg" width="32" height="32" alt="Instagram"></img></a>
+                <a href="#"><img src="img\index\icon_twitter.svg" width="32" height="32" alt="Twitter"></img></a>
             </ul>
         </section>
         <section>
             <ul>
                 <p><a href="blank.html">
-                        <img src="img\index\heart.svg" width="15" height="13"></img>
+                        <img src="img\index\heart.svg" width="15" height="13" alt="Сердце"></img>
                         Для поставщиков</a>
                     <a href="blank.html">Наши документы</a>
                 </p>
@@ -55,7 +55,7 @@
             </ul>
         </section>
         <section>
-            <img src="img\index\logo_academy.svg" width="108" height="39" viewBox="0 0 108 39" fill="none">
+            <img src="img\index\logo_academy.svg" width="108" height="39" alt="Логотип академии" viewBox="0 0 108 39" fill="none">
             <p>Сделано в <a href="blank.html">HTML Academy</a> © 2019</p>
         </section>
     </footer>
