--- a/catalog.html
+++ b/catalog.html
@@ -20,13 +20,13 @@
                 <li><a href="blank.html">О компании</a></li>
             </ul>
             <li><a href="#">
-                    <img src="img\index\icon_search.svg" width="16" height="16">
+                    <img src="img\index\icon_search.svg" width="16" height="16" alt="Поиск">
                 </a></li>
             <li><a href="blank.html">
-                    <img src="img\index\icon_authorization.svg" width="20" height="19">
+                    <img src="img\index\icon_authorization.svg" width="20" height="19" alt="Вход">
                     Вход</a></li>
             <li><a href="blank.html">
-                    <img src="img\index\icon_basket.svg" width="21" height="20">
+                    <img src="img\index\icon_basket.svg" width="21" height="20" alt="Корзина">
                     Корзина</a></li>
         </nav>
     </header>
@@ -48,7 +48,6 @@
         </section>
         <section>
             <h2>Фильтр товаров</h2>
-            <p> <!--TODO: fieldset не надо оборачивать в тег p-->
             <fieldset>
                 <legend>Сортировка:</legend>
                 <form action="select1.php" method="post">
@@ -61,7 +60,6 @@
                     <p><input type="submit" value="Отправить"></p>
                 </form>
             </fieldset>
-            </p>
             <p>
                 <fieldset>Цена: 100 Р - 500 Р</p> <!--TODO: работает некорректно. Привести в порядок-->
             <p><input type="range" min="0" max="100" step="1" value="50"></fieldset></p>
