--- a/catalog.html
+++ b/catalog.html
@@ -118,25 +118,25 @@
             <section> <!--TODO: сделать одну большую секцию с набором артикулов-->
                 <ul>
                     <li>
-                        <a href="blank.html"> <input type="image" src="img\index\hit_1.jpg">
+                        <a href="blank.html"> <input type="image" src="img\index\hit_1.jpg" height="267" width="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
                             <p>Сливочное с апельсиновым джемом и цитрусовой стружкой</p>
                         </a>
                         <p><button type="button">Быстрый просмотр</button></p>
                     </li>
                     <li>
-                        <a href="blank.html"><img src="img\index\hit_2.jpg">
+                        <a href="blank.html"><img src="img\index\hit_2.jpg" height="267" width="267" alt="Сливочно-кофейное с кусочками шоколада">
                             <p>Сливочно-кофейное с кусочками шоколада</p>
                         </a>
                         <p><button type="button">Быстрый просмотр</button></p>
                     </li>
                     <li>
-                        <a href="blank.html"><img src="img\index\hit_3.jpg">
+                        <a href="blank.html"><img src="img\index\hit_3.jpg" height="267" width="267" alt="Сливочно-клубничное с присыпкой из белого шоколада" >
                             <p>Сливочно-клубничное с присыпкой из белого шоколада</p>
                         </a>
                         <p><button type="button">Быстрый просмотр</button></p>
                     </li>
                     <li>
-                        <a href="blank.html"><img src="img\index\hit_4.jpg">
+                        <a href="blank.html"><img src="img\index\hit_4.jpg" height="267" width="267" alt="Сливочное крем-брюле c карамельной подливкой">
                             <p>Сливочное крем-брюле c карамельной подливкой</p>
                         </a>
                         <p><button type="button">Быстрый просмотр</button></p>
@@ -146,24 +146,24 @@
             <section>
                 <ul>
                     <li>
-                        <a href="blank.html"></a><img src="img\catalog\product_1.jpg">
+                        <a href="blank.html"></a><img src="img\catalog\product_1.jpg" height="267" width="267" alt="Сливочное с брусничным джемом">
                         <p>Сливочное с брусничным джемом</p></a>
                         <p><button type="button">Быстрый просмотр</button></p>
                     </li>
                     <li>
-                        <a href="blank.html"><img src="img\catalog\product_2.jpg">
+                        <a href="blank.html"><img src="img\catalog\product_2.jpg" height="267" width="267" alt="Сливочно-черничное с цельными ягодами черники">
                             <p>Сливочно-черничное с цельными ягодами черники</p>
                         </a>
                         <p><button type="button">Быстрый просмотр</button></p>
                     </li>
                     <li>
-                        <a href="blank.html"><img src="img\catalog\product_3.jpg">
+                        <a href="blank.html"><img src="img\catalog\product_3.jpg" height="267" width="267" alt="Сливочно-лимонное с карамельной присыпкой">
                             <p>Сливочно-лимонное с карамельной присыпкой</p>
                         </a>
                         <p><button type="button">Быстрый просмотр</button></p>
                     </li>
                     <li>
-                        <a href="blank.html"><img src="img\catalog\product_4.jpg">
+                        <a href="blank.html"><img src="img\catalog\product_4.jpg" height="267" width="267" alt="Сливочное с шоколадной стружкой">
                             <p>Сливочное с шоколадной стружкой</p>
                         </a>
                         <p><button type="button">Быстрый просмотр</button></p>
@@ -173,25 +173,25 @@
             <section>
                 <ul>
                     <li>
-                        <a href="blank.html"><img src="img\catalog\product_5.jpg">
+                        <a href="blank.html"><img src="img\catalog\product_5.jpg" height="267" width="267" alt="Сливочно-ванильное с кусочками шоколада">
                             <p>Сливочно-ванильное с кусочками шоколада</p>
                         </a>
                         <p><button type="button">Быстрый просмотр</button></p>
                     </li>
                     <li>
-                        <a href="blank.html"><img src="img\catalog\product_6.jpg">
+                        <a href="blank.html"><img src="img\catalog\product_6.jpg" height="267" width="267" alt="Сливочное с ментоловым сиропом">
                             <p>Сливочное с ментоловым сиропом</p>
                         </a>
                         <p><button type="button">Быстрый просмотр</button></p>
                     </li>
                     <li>
-                        <a href="blank.html"><img src="img\catalog\product_7.jpg">
+                        <a href="blank.html"><img src="img\catalog\product_7.jpg" height="267" width="267" alt="Сливочное с кусочками черного шоколада">
                             <p>Сливочное с кусочками черного шоколада</p>
                         </a>
                         <p><button type="button">Быстрый просмотр</button></p>
                     </li>
                     <li>
-                        <a href="blank.html"><img src="img\catalog\product_8.jpg">
+                        <a href="blank.html"><img src="img\catalog\product_8.jpg" height="267" width="267" alt="Сливочное с мятным сиропом">
                             <p>Сливочное с мятным сиропом</p>
                         </a>
                         <p><button type="button">Быстрый просмотр</button></p>
@@ -219,16 +219,16 @@
     <footer>
         <section>
             <ul>
-                <a href="#"><img src="img\index\icon_facebook.svg" width="32" height="32"></img></a>
-                <a href="#"><img src="img\index\icon_vk.svg" width="32" height="32"></img></a>
-                <a href="#"><img src="img\index\icon_instagram.svg" width="32" height="32"></img></a>
-                <a href="#"><img src="img\index\icon_twitter.svg" width="32" height="32"></img></a>
+                <a href="#"><img src="img\index\icon_facebook.svg" width="32" height="32" alt="Facebook"></img></a>
+                <a href="#"><img src="img\index\icon_vk.svg" width="32" height="32" alt="VK"></img></a>
+                <a href="#"><img src="img\index\icon_instagram.svg" width="32" height="32" alt="Istagram"></img></a>
+                <a href="#"><img src="img\index\icon_twitter.svg" width="32" height="32" alt="Twitter"></img></a>
             </ul>
         </section>
         <section>
             <ul>
                 <p><a href="blank.html">
-                        <img src="img\index\heart.svg" width="15" height="13"></img>
+                        <img src="img\index\heart.svg" width="15" height="13" alt="Heart"></img>
                         Для поставщиков</a>
                     <a href="blank.html">Наши документы</a>
                 </p>
@@ -238,7 +238,7 @@
             </ul>
         </section>
         <section>
-            <img src="img\index\logo_academy.svg" width="108" height="39" viewBox="0 0 108 39" fill="none">
+            <img src="img\index\logo_academy.svg" width="108" height="39" alt="Логотип академия" viewBox="0 0 108 39" fill="none">
             <p>Сделано в <a href="blank.html">HTML Academy</a> © 2019</p>
         </section>
     </footer>
