Squashed commit of the following:
commit f93825ce49d107a3cef4c52cc173fdea2d4e7286
Author: Angelina <mercureed0@gmail.com>
Date:   Tue Oct 26 21:46:33 2021 +0300

    Добавила классы

commit aa8a08ec70ddff42a841cebfb72e021d839d72af
Author: Angelina <mercureed0@gmail.com>
Date:   Mon Oct 25 20:31:58 2021 +0300

    Исправлен тег img (+alt и размеры)

commit e1ad2dbf098de59fbe088428db6419cf79b14840
Author: gerstlee <mercureed0@gmail.com>
Date:   Sun Oct 17 20:53:43 2021 +0300

    Update index.html

commit f74123a3e66bb8c6d0dce27df482c02e8c059ffd
Author: Angelina <mercureed0@gmail.com>
Date:   Sat Oct 9 22:30:07 2021 +0300

    Update index.html

commit 33a1147aad0431bebc9a869376bb46836c317977
Author: Angelina <mercureed0@gmail.com>
Date:   Sat Oct 9 22:29:59 2021 +0300

    Create blank.html

commit c54662d68d8adb5871c554ace8db2c769c6a8151
Author: Angelina <mercureed0@gmail.com>
Date:   Fri Oct 8 23:06:15 2021 +0300

    Add pics

commit 458944a3ce042964fb49545c802ab940c82e3d45
Author: Angelina <mercureed0@gmail.com>
Date:   Fri Oct 8 21:26:48 2021 +0300

    Update index.html

--- a/index.html
+++ b/index.html
@@ -1,9 +1,211 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Test</title>
-    </head>
-    <body>
-        <p>Привет</p>
-    </body>
+<html class="page" lang="ru">
+
+<head>
+    <meta charset="UTF-8">
+    <title>Магазин мороженого "Gllacy Shop"</title>
+</head>
+
+<body class="page-body" style="background-color: #849D8F;">
+    <header class="main-header">
+        <nav class="main-navigation">
+            <a href="index.html">
+                <img class="main-header-logo" src="img\index\logo.svg" width="154" height="64" alt="Логотип магазина мороженого Gllacy Shop">
+            </a>
+            <ul class="site-navigation">
+                <li><a href="catalog.html">Каталог</a></li>
+                <li><a href="blank.html">Доставка и оплата</a></li>
+                <li><a href="blank.html">О компании</a></li>
+            </ul>
+        </nav>
+        <ul class="user-menu">
+            <li>
+                <a class="search-link" href="#">
+                    <img src="img\index\icon_search.svg" width="16" height="16" alt="Поиск">
+                </a>
+            </li>
+            <li>
+                <a class="login-link" href="blank.html">
+                    <img src="img\index\icon_authorization.svg" width="20" height="19" alt="Вход">
+                    Вход
+                </a>
+            </li>
+            <li>
+                <a class="basket-link" href="blank.html">
+                    <img src="img\index\icon_basket.svg" width="21" height="20" alt="Корзина">
+                    Корзина
+                </a>
+            </li>
+        </ul>
+    </header>
+
+    <main class="container">
+        <h1>Магазин мороженого "Gllacy Shop"</h1>
+        <div>
+            <p>с 10 до 20, ежедневно</p>
+            <p>8 812 450-25-25</p>
+        </div>
+        <section class="production">
+            <h2>Продукция</h2>
+            <ul class="production-list">
+                <li class="production-item">
+                    <p>Крем-брюле и пломбир с малиновым джемом</p>
+                    <button class="button">Давайте оба!</button>
+                </li>
+                <li class="production-item">
+                    <p>Шоколадный пломбир и лимонный сорбет</p>
+                    <button class="button">Давайте оба!</button>
+                </li>
+                <li class="production-item">
+                    <p>Пломбир с помадкой и клубничный щербет</p>
+                    <button class="button">Давайте оба!</button>
+                </li>
+            </ul>
+        </section>
+        <section class="promo">
+            <h2>Акции</h2>
+            <ul class="promo-list">
+                <li class="promo-item">
+                    <h3>Малинка даром!</h3>
+                    <p>При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья
+                        бесплатно
+                    </p>
+                    <button class="button">Хочу варенье!</button>
+                </li>
+                <li class="promo-item">
+                    <h3>Шоколадки даром!</h3>
+                    <p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадки совершенно бесплатно
+                    </p>
+                    <button class="button">Хочу шоколадки!</button>
+                </li>
+            </ul>
+        </section>
+        <section class="catalog">
+            <h2>Каталог</h2>
+            <ul class="catalog-list">
+                <li class="catalog-item">
+                    <img src="img\index\hit_1.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой"></img>
+                    <p>Сливочное с апельсиновым джемом и цитрусовой стружкой</p>
+                    <button class="button">Быстрый просмотр</button>
+                </li>
+                <li class="catalog-item">
+                    <img src="img\index\hit_2.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада"></img>
+                    <p>Сливочно-кофейное с кусочками шоколада</p>
+                    <button class="button">Быстрый просмотр</button>
+                </li>
+                <li class="catalog-item">
+                    <img src="img\index\hit_3.jpg" width="267" height="267" alt="Сливочно-клубничное c присыпкой из белого шоколада"></img>
+                    <p>Сливочно-клубничное c присыпкой из белого шоколада</p>
+                    <button class="button">Быстрый просмотр</button>
+                </li>
+                <li class="catalog-item">
+                    <img src="img\index\hit_4.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой"></img>
+                    <p>Сливочное крем-брюле с карамельной подливкой</p>
+                    <button class="button">Быстрый просмотр</button>
+                </li>
+            </ul>
+        </section>
+        <section class="features">
+            <h2>Магазин Глэйси – это онлайн и офлайн-магазин по продаже мороженого собственного производства на развес
+            </h2>
+            <ul class="features-list">
+                <li class="features-item">
+                    <p><img src="img\index\icon_ice_cream.svg" width="16" height="32" alt="Мороженое"></img>
+                        Все наше мороженое изготавливается на собственном производстве, с использованием современного
+                        оборудования и проверенных временем технологий</p>
+                </li>
+                <li class="features-item">
+                    <p><img src="img\index\icon_leaf.svg" width="16" height="27" alt="Лист"></img>
+                        Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все
+                        дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья</p>
+                </li>
+                <li class="features-item">
+                    <p><img src="img\index\icon_cow.svg" width="24" height="24" alt="Корова"></img>
+                        Закупка ингредиентов производится только у проверенных фермерских хозяйств и компаний, с
+                        которыми нас
+                        связывает долговременное сотрудничество</p>
+                </li>
+                <li class="features-item">
+                    <p><img src="img\index\icon_thermometer.svg" width="16" height="26" alt="Термометр"></img>
+                        Доставка нашего мороженого до заказчиков осуществляется в специальнои термопаке, который не дает
+                        мороженому растаять в пути и позволяет сохранить превосходный вкус</p>
+                </li>
+            </ul>
+        </section>
+        <section class="new">
+            <h4>Новое в нашем блоге</h4>
+            <p><a href="blank.html">10 способов сервировки фруктовых щербетов к столу</a></p>
+        </section>
+        <section class="mailing">
+            <p>Подпишитесь на нашу сладкую рассылку и будьте всегда в курсе всего самого вкусного, что у нас
+                происходит.Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
+            <input type="email" name="e-mail" placeholder="email@example.com">
+            <button class="mailing-button" type="submit">Отправить</button>
+        </section>
+        <section class="map">
+            <img src="img\index\map.jpg" alt="Карта">
+            <!--здесь будет карта-->
+            <!--здесь форма записи-->
+        </section>
+    </main>
+
+    <footer class="main-footer">
+        <section class="social">
+            <ul>
+                <li><a class="social-button" href="#"><img src="img\index\icon_facebook.svg" width="32" height="32" alt="Facebook"></img></a></li>
+                <li><a class="social-button" href="#"><img src="img\index\icon_vk.svg" width="32" height="32" alt="VK"></img></a></li>
+                <li><a class="social-button" href="#"><img src="img\index\icon_instagram.svg" width="32" height="32" alt="Instagram"></img></a></li>
+                <li><a class="social-button" href="#"><img src="img\index\icon_twitter.svg" width="32" height="32" alt="Twitter"></img></a></li>
+            </ul>
+        </section>
+        <section class="info">
+            <ul class="info-list">
+                <li><a class="info-item" href="blank.html">
+                        <img src="img\index\heart.svg" width="15" height="13" alt="Heart"></img>
+                        Для поставщиков</a>
+                </li>
+                <li>
+                    <a class="info-item" href="blank.html">Наши документы</a>
+                </li>
+                <li><a class="info-item" href="blank.html">О производстве</a> 
+                </li>
+                <li>
+                    <a class="info-item" href="blank.html">Экологические стандарты</a>
+                </li>
+            </ul>
+        </section>
+        <section class="footer-copyright">
+            <img src="img\index\logo_academy.svg" width="108" height="39" alt="Логотип академии" viewBox="0 0 108 39" fill="none">
+            <p>Сделано в <a href="blank.html">HTML Academy</a> © 2019</p>
+        </section>
+    </footer>
+    <section class="modal">
+        <h2>Личный кабинет</h2>
+        <p class="modal-description">Введите, пожалуйста, свой логин и пароль</p>
+        <form class="login-form" action="http://echo.htmlacademy.ru" method="post">
+            <p>
+                <label for="login-login">Логин</label>
+                <input class="login-icon-user" id="login-login" type="email" name="login" placeholder="email@example.com">
+            </p>
+            <p>
+                <label for="login-password">Пароль</label>
+                <input class="login-icon-password" id="login-password" type="password" name="pasword" placeholder="********">
+            </p>
+            <p class="login-help">
+                <label class="login-checkbox">
+                    <input type="checkbox" name="remember">
+                    Запомните меня
+                </label>
+                <a class="restore" href="blank.html">Я забыл пароль!</a>
+            </p>
+            <p>
+                <button class="button" type="submit">Войти</button>
+            </p>
+        </form>
+        <p>
+            <button class="modal-close" type="button">Закрыть</button>
+        </p>
+    </section>
+</body>
+
 </html>
